<resources>
    <string name="app_name">FinalProject</string>
    <string name="buttonOne">Food Nutrition Database</string>
    <string name="buttonTwo">CBC News Reader</string>
    <string name="buttonThree">Movie Information</string>
    <string name="buttonFour">OC Bus Route</string>
    <string name="buttonNewStop">Enter New Stop</string>
    <string name="labelStopData">Stop Numbers</string>
    <string name="labelNumberData">Bus Numbers</string>
    <string name="labelDestination">Destination:</string>
    <string name="labelCoordinates">Latitude and Longitude:</string>
    <string name="labelSpeedGPS">GPS Speed:</string>
    <string name="labelTimeStart">Trip Start Time:</string>
    <string name="labelAdjustedTime">Adjusted Schedule Time:</string>
    <string name="snackBttn">AVG</string>
    <string name="buttonRemStop">Remove Stop</string>
    <string name="busAuthor">Chase Langford</string>
    <string name="busActivityVersion">Version: 1.0</string>
    <string name="busInstructions">\nSelect a stop number, and one of the displayed route numbers to view information about the next trip.
                                    \n\nTo add a new stop select (+) from the menu
                                    \n\nTo remove a stop, select it form the list of stops and then select (-) from the menu.  Confirm to delete.
                                    \n\nAvg button displays the average late time of all buses viewed to date.
                                    \n\nNote: when viewing both the list of stops and list of buses are scrollable</string>
    <string name="app_label">Food Nutrition Database</string>
    <string name="search_hint">ex. apple...</string>
    <string name="addToFav">Add to favorites</string>
    <string name="filters">Filters</string>
    <string name="help">Help</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="cal">Calories</string>
    <string name="fat">Fat</string>
    <string name="foodSearch">Search foods</string>
    <string name="authorInfo">Created by Harry Hum</string>
    <string name="instructionsFood">Search the food database for any food item to retrieve nutrition information. Optionally filter food items by calories and fat. Add food items to a list of favorites and check items to calculate total calories and fats.</string>
    <string name="favAdded">Added to favorites</string>
    <string name="undo">Undo</string>
    <string name="alreadyExists">Item is already in favorites!</string>
    <string name="goToFav">Go to favorites</string>
    <string name="itemRemoved">Item removed</string>
    <string name="addTag">Add tag:</string>
    <string name="tagHint">ex. breakfast</string>
    <string name="mainMessage">Search for something you ate!</string>
    <string name="movie">Movies</string>
    <string name="food">Food</string>
    <string name="bus">Bus</string>
    <string name="cbc">CBC</string>

    <string name="CBCNewsTitle">CBC news</string>
    <string name="Saved">Saved</string>
    <string name="cbcHelpInstruction">This application loads CBC news and gives you possibility to save news on the phone.
    To view saved news and statistic please go to Saved menu.</string>


    <string name="title_activity_detail_movie">DetailMovieActivity</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="enter_movie">Enter The Movie Title</string>

    <string name="navigation_drower_open">Open navigation drower</string>
    <string name="navigation_drower_Close">Close navigation drower</string>

    <string name="text_with_paragraphs">
       Fill the text box and hit search to find
        the movie. After the movie title is up
        in the screen, click it for more
        information
    </string>
    <string name="search">SEARCH</string>
    <string name="about">About</string>
    <string name="gotit">GOT IT</string>
    <string name="title_activity_full_screen_image">FullScreenImageActivity</string>
    <string name="title_activity_list_movie">Movie List</string>
    <string name="My_Movie_List">My Movie List</string>

</resources>
