<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/movie"
        android:id="@+id/movieMenuItem"
        android:icon="@drawable/movie"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:title="@string/bus"
        android:id="@+id/busMenuItem"
        android:icon="@drawable/bus"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:title="@string/food"
        android:id="@+id/foodMenuItem"
        android:icon="@drawable/food"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:title="@string/cbc"
        android:id="@+id/cbcMenuItem"
        android:icon="@drawable/news"
        app:showAsAction="always|collapseActionView"/>

</menu>