<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/busAuthor"
        android:id="@+id/busAuthor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busActivityVersion"
        android:id="@+id/busActivityVersion"
        android:layout_below="@+id/busAuthor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/busInstructions"
        android:id="@+id/busInstructions"
        android:layout_below="@+id/busActivityVersion"/>
</RelativeLayout>
