<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BusActivity"
    android:id="@+id/mainLayout">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bus_toolbar"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBarBus"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelStopData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelStopData" />
            <ListView
                android:id="@+id/listStopNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/labelNumberData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelNumberData" />
            <ListView
                android:id="@+id/listBusNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/labelDestination"
                android:text="@string/labelDestination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/textDestination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/labelCoordinates"
                android:text="@string/labelCoordinates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/textCoordinates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/labelSpeedGPS"
                android:text="@string/labelSpeedGPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/textSpeedGPS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/labelTimeStart"
                android:text="@string/labelTimeStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/textTimeStart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:id="@+id/labelAdjustedTime"
                android:text="@string/labelAdjustedTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/textAdjustedtime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id="@+id/snackBttn"
                    android:text="@string/snackBttn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>